# JniHelpers

./: .gitignore  CMakeLists.txt  README.md  build.gradle
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
src/: JniClass.h  JniHelper.cpp  JniHelper.h  JniLocalRef.h
src/main/cpp/: ByteArray.cpp  ByteArray.h  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  ClassRegistry.cpp  ClassRegistry.h  ClassWrapper.cpp  ClassWrapper.h  JavaArray.cpp  JavaArray.h  JavaByteArray.h  JavaCharArray.h  JavaClass.cpp  JavaClass.h  JavaClassUtils.cpp  JavaClassUtils.h  JavaExceptionUtils.cpp  JavaExceptionUtils.h  JavaString.cpp  JavaString.h  JavaStringArray.cpp  JavaStringArray.h  JavaThreadUtils.cpp  JavaThreadUtils.h  JniClass.h  JniClassUtils.cpp  JniClassUtils.h  JniClassWrapper.cpp  JniClassWrapper.h  JniClassWrapperMap.h  JniException.cpp  JniException.h  JniGlobalRef.h  JniHelper.cpp  JniHelper.h  JniHelpers.cpp  JniHelpers.h  JniHelpersCommon.h  JniLocalRef.h  (+9 more)
src/main/java/com/spotify/jni/: JniHelpers.java  JniHelpersLoader.java  NativeObject.java
src/main/java/com/spotify/jni/annotations/: UsedByNativeCode.java
src/main/java/com/spotify/jnihelpers/: JniHelpers.java
src/test/cpp/: ByteArrayTest.cpp  ByteArrayTest.h  CMakeLists.txt  ClassRegistryTest.cpp  ClassRegistryTest.h  ClassWrapperTest.cpp  ClassWrapperTest.h  JUnitUtils.h  JavaArrayTest.cpp  JavaArrayTest.h  JavaByteArrayTest.cpp  JavaByteArrayTest.h  JavaClassTest.cpp  JavaClassTest.h  JavaClassUtilsTest.cpp  JavaClassUtilsTest.h  JavaExceptionUtilsTest.cpp  JavaExceptionUtilsTest.h  JavaStringArrayTest.cpp  JavaStringArrayTest.h  JavaStringTest.cpp  JavaStringTest.h  JniHelpersTest.cpp  JniHelpersTest.h  JniHelpersTestInit.cpp  JniHelpersTestInit.h  NativeObjectTest.cpp  NativeObjectTest.h  PersistedObject.cpp  PersistedObject.h  TestConstants.h  TestObject.cpp  TestObject.h
src/test/data/: CMakeLists.txt  TestConstants.txt
src/test/java/com/spotify/jni/: ByteArrayTest.java  ClassRegistryTest.java  ClassWrapperTest.java  JavaArrayTest.java  JavaClassTest.java  JavaClassUtilTest.java  JavaClassUtilsTest.java  JavaExceptionUtilsTest.java  JavaStringArrayTest.java  JavaStringTest.java  JavaThreadUtilsTest.java  JniHelpersTest.java  NativeByteBufferTest.java  NativeObjectTest.java  PersistedObject.java  TestConstants.java  TestObject.java
src/test/java/com/spotify/jni/util/: Success.java  TestObject.java
src/test/java/com/spotify/jnihelpers/: JniHelpersTest.java  TestObject.java
tmp/: JniHelpers.cpp  JniHelpers.h
